Testing for hover bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ svg {
     left: 50%;
     transform: translateX(-50%);
     overflow: visible;
-    /* pointer-events: none; */
+    pointer-events: all;
 }
 
 canvas {
@@ -72,7 +72,12 @@ canvas {
     left: 50%;
     transform: translateX(-50%);
     z-index: -1;
-    /* pointer-events: all; */
+    pointer-events: none;
+}
+
+.background-rect {
+    fill: none;
+    pointer-events: all;
 }
 
 .center-title {
